--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -290,7 +290,8 @@
     "SwampmanEntity": true,
     "InvisicreeperEntity": true,
     "Maw": true,
-    "ZombifiedPiglin": true
+    "ZombifiedPiglin": true,
+    "BlobEntity": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -489,7 +490,8 @@
     "SwampmanEntity": false,
     "InvisicreeperEntity": false,
     "Maw": false,
-    "ZombifiedPiglin": false
+    "ZombifiedPiglin": false,
+    "BlobEntity": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -631,6 +633,8 @@
     "SilverqueenattackingEntity": 66.30000305175781,
     "EldBombEntity": 14.699999809265137,
     "InvisicreeperEntity": 1.9900000095367432,
-    "SkeletonVillager": 50.79999923706055
+    "SkeletonVillager": 50.79999923706055,
+    "Ravager": 331.0,
+    "EarthElementalEntity": 110.4000015258789
   }
 }
