--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -291,7 +291,8 @@
     "InvisicreeperEntity": true,
     "Maw": true,
     "ZombifiedPiglin": true,
-    "BlobEntity": true
+    "BlobEntity": true,
+    "AirElementalEntity": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -491,7 +492,8 @@
     "InvisicreeperEntity": false,
     "Maw": false,
     "ZombifiedPiglin": false,
-    "BlobEntity": false
+    "BlobEntity": false,
+    "AirElementalEntity": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -636,6 +638,7 @@
     "SkeletonVillager": 50.79999923706055,
     "Ravager": 331.0,
     "EarthElementalEntity": 110.4000015258789,
-    "EntityCentipedeHead": 54.25
+    "EntityCentipedeHead": 54.25,
+    "GiantSpiderEntity": 123.5999984741211
   }
 }
